--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@ header-img: "img/post-bg-rwd.jpg"
 </select> -->
 
 <!-- Chinese Version -->
-<!--<div class="zh post-container">
+<div class="zh post-container">
 
     <!--copied from markdown -->
-<!--    <blockquote><p>冰冻三尺 非一日之寒<br>
+    <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
     <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
@@ -58,7 +58,7 @@ header-img: "img/post-bg-rwd.jpg"
 </div> -->
 
 <!-- Handle Language Change -->
-<!--<script type="text/javascript">
+<script type="text/javascript">
     // get nodes
     var $zh = document.querySelector(".zh");
     var $en = document.querySelector(".en");
@@ -99,12 +99,12 @@ header-img: "img/post-bg-rwd.jpg"
 
 
 <!-- Gitalk 评论 start  -->
-<!--{% if site.gitalk.enable %}
+{% if site.gitalk.enable %}
 <!-- Gitalk link  -->
-<!--<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-<!--<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
 
-<!--<div id="gitalk-container"></div>
+<div id="gitalk-container"></div>
     <script type="text/javascript">
     var gitalk = new Gitalk({
     clientID: '{{site.gitalk.clientID}}',
@@ -120,8 +120,8 @@ header-img: "img/post-bg-rwd.jpg"
 {% endif %}
 <!-- Gitalk end -->
 
- <!-- disqus 评论框 start  -->
-<!--{% if site.disqus.enable %}
+<!-- disqus 评论框 start  -->
+{% if site.disqus.enable %}
 
 <div class="comment">
     <div id="disqus_thread" class="disqus-thread">
@@ -130,7 +130,7 @@ header-img: "img/post-bg-rwd.jpg"
 <!-- disqus 评论框 end -->
 
 <!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
-<!--<script type="text/javascript">
+<script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     var disqus_shortname = "{{site.disqus.username}}";
     var disqus_identifier = "{{site.disqus.username}}/{{page.url}}";
@@ -143,6 +143,4 @@ header-img: "img/post-bg-rwd.jpg"
     })();
 </script>
 <!-- disqus 公共JS代码 end -->
-<!--{% endif %}
-
-
+{% endif %}
