--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "We are Anonymous"
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/Anonymous.png"
 ---
 
 <!-- Language Selector -->
