--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "We are Anonymous"
+description: "Swordsman on the Internet～"
 header-img: "img/Anonymous.png"
 ---
 
@@ -15,7 +15,7 @@ header-img: "img/Anonymous.png"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p> We are Anonymous </p></blockquote>
+    <blockquote><p> Swordsman on the Internet～ </p></blockquote>
 
     <p>Hey，我是<strong>Ripper-S</strong>，一名嵌入式-linux程序猿，现在珠海工作。</p>
 
