--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ header-img: "img/Anonymous.png"
     <!--copied from markdown -->
     <blockquote><p> Swordsman on the Internet～ </p></blockquote>
 
-    <p>Hey，我是<strong>Ripper-S</strong>，一名嵌入式-linux程序猿，现在珠海工作。</p>
+    <p>Hey，我是<strong>Ripper-S</strong>，一名嵌入式-linux爱好者，坐标成都。</p>
 
     <p>工作、学习之余，我还是一个DIY装机爱好者。</p>
 
