--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "We are Anonymous"
+description: "Swordsman on the Internet~"
 ---
 
 {% for post in paginator.posts %}
